tests/rosetta/out/Rust/binary-digits.error
rustc: exit status 1
error[E0277]: cannot calculate the remainder of `i32` divided by `String`
  --> /tmp/binary-digits.rs:10:38
   |
10 |             bits = format!("{}{}", x % 2.to_string(), bits);
   |                                      ^ no implementation for `i32 % String`
   |
   = help: the trait `Rem<String>` is not implemented for `i32`
   = help: the following other types implement trait `Rem<Rhs>`:
             `&i32` implements `Rem<i32>`
             `&i32` implements `Rem`
             `i32` implements `Rem<&i32>`
             `i32` implements `Rem`

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/binary-digits.rs:11:43
   |
11 |             x = ((x as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                           ^^^^^ method not found in `f64`

error[E0308]: mismatched types
  --> /tmp/binary-digits.rs:13:16
   |
3  |     fn toBin(n: i32) -> &'static str {
   |                         ------------ expected `&'static str` because of return type
...
13 |         return bits;
   |                ^^^^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
13 |         return &bits;
   |                +

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.
