tests/rosetta/out/Rust/binary-digits.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:39:50Z
fn main() {
    fn toBin(n: i32) -> &'static str {
        if n == 0 {
            return "0";
        }
        let mut bits = "";
        let mut x: i32 = n;
        while x > 0 {
            bits = format!("{}{}", x % 2.to_string(), bits);
            x = ((x as f64) / (2 as f64)).parse::<i32>().unwrap();
        }
        return bits;
    }
    for i in 0..16 {
        println!("{}", toBin(i));
    }
}
